Edited wiki page through web user interface.

--- a/wiki/RestResources.wiki
+++ b/wiki/RestResources.wiki
@@ -1,9 +1,9 @@
 #summary Background knowledge on REST
 #labels Featured
 
-  # [http://rest.blueoxen.net/cgi-bin/wiki.pl?RESTfulDesign RESTfulDesign] - "RESTful Design is the process of developing a system of resources that behave in a RESTful way. This page is intended to describe a specific approach which I have found useful." - How do I go about building the Django pieces to support the design one comes up with when following the process described here?
-  # [http://www.tbray.org/ongoing/When/200x/2007/04/30/REST-is-easy I finally get REST. Wow.]
-  # [http://pluralsight.com/blogs/tewald/archive/2007/04/26/46984.aspx Three reasons that REST is not RPC]
-  # [http://bitworking.org/news/141/REST-Tips-Prefer-following-links-over-URI-construction REST Tips: Prefer following links over URI construction]
-  # [http://intertwingly.net/wiki/pie/Implementations Freely available Atom publishing clients]
-  # [http://www.mnot.net/blog/2007/02/27/rest_issues REST Issues, Real and Imagined]
+  * [http://rest.blueoxen.net/cgi-bin/wiki.pl?RESTfulDesign RESTfulDesign]
+  * [http://www.tbray.org/ongoing/When/200x/2007/04/30/REST-is-easy I finally get REST. Wow.]
+  * [http://pluralsight.com/blogs/tewald/archive/2007/04/26/46984.aspx Three reasons that REST is not RPC]
+  * [http://bitworking.org/news/141/REST-Tips-Prefer-following-links-over-URI-construction REST Tips: Prefer following links over URI construction]
+  * [http://intertwingly.net/wiki/pie/Implementations Freely available Atom publishing clients]
+  * [http://www.mnot.net/blog/2007/02/27/rest_issues REST Issues, Real and Imagined]
