--- a/wiki/OpenQuestions.wiki
+++ b/wiki/OpenQuestions.wiki
@@ -1,5 +1,5 @@
+#summary Issues that don't have a clear solution yet.
 #labels Featured
-  # Issues that don't have a clear solution yet.
 
   * Should URLs be generated automatically?
   * Do we make use of the existing generic views, use serializers or make both an option? If both, how?
