--- a/wiki/RestResources.wiki
+++ b/wiki/RestResources.wiki
@@ -7,3 +7,4 @@
   * [http://bitworking.org/news/141/REST-Tips-Prefer-following-links-over-URI-construction REST Tips: Prefer following links over URI construction]
   * [http://intertwingly.net/wiki/pie/Implementations Freely available Atom publishing clients]
   * [http://www.mnot.net/blog/2007/02/27/rest_issues REST Issues, Real and Imagined]
+  * [http://www.prescod.net/rest/ Paul's REST Resources]
